--- a/jasmine-testing-exercises/calculator/calculator.html
+++ b/jasmine-testing-exercises/calculator/calculator.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Load Calculator</title>
+    <title>Loan Calculator</title>
     <script type="text/javascript" src="calculator.js"></script>
     <link rel="stylesheet" href="calculator.css">
   </head>
@@ -13,7 +13,7 @@
     <section class="calc-container">
       <form id="calc-form">
         <label>
-          Loan Amount
+          Loan Amount $
           <input type="text" id="loan-amount">
         </label>
         <label>
@@ -22,7 +22,7 @@
         </label>
         <label>
           Yearly Rate
-          <input type="text" id="loan-rate">
+          % <input type="text" id="loan-rate">
         </label>
         <button type="submit" id="calc-submit">Calculate</button>
       </form>
